--- a/lib/zam_web/templates/layout/app.html.eex
+++ b/lib/zam_web/templates/layout/app.html.eex
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="A search only indexing vetted sources." />
-    <title>Zam Search</title>
+    <title>YamZam Search</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
@@ -13,12 +13,9 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="/about">About Zam</a></li>
+            <li><a href="/about">About YamZam</a></li>
           </ul>
         </nav>
-        <!--<a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>-->
       </section>
     </header>
     <main role="main" class="container">
