--- a/lib/zam_web/templates/page/about.html.eex
+++ b/lib/zam_web/templates/page/about.html.eex
@@ -1,5 +1,8 @@
-<h1>About Zam Search</h1>
+<h1>About Yam<span class="zam">Zam</span> Search</h1>
 <p>Zam is a walled search that only indexes select domains.</p>
 
 <h2>Cookie Policy</h2>
 <p>If we want a cookie we'll make a policy.</p>
+
+<h2>Terms of Service</h2>
+<p>Find what you are looking for and be on your way then.</p>
