--- a/lib/zam_web/templates/search/search.html.leex
+++ b/lib/zam_web/templates/search/search.html.leex
@@ -1,5 +1,5 @@
 <section class="search">
-  <h1><%= gettext "Zam", name: "Zam" %></h1>
+  <h1><%= gettext "yam", name: "yam" %><span class="zam"><%= gettext "zam", name: "yamzam" %></span></h1>
 
   <form action="#" phx-submit="search" phx-change="suggest">
     <%= search_input :search, :text, placeholder: "", value: @search_for, autocomplete: "off" %>
@@ -14,11 +14,18 @@
 </section>
 
 <section class="results">
+  <%= if (@offset > 0) do %>
+    <div class="view_next" phx-click="search_results_next_page">View more results</div>
+  <% end %>
+
   <%= for result <- @results do %>
     <div class="result">
       <div class="title"><a href="https://<%= result.link %>"><%= result.title %></a></div>
       <div class="link"><a href="https://<%= result.link %>"><%= result.link %></a></div>
       <div clsas="description"><%= result.description %></div>
     </div>
+  <% end %>
+  <%= if (@offset > 0) do %>
+    <div class="view_next" phx-click="search_results_next_page">View more results</div>
   <% end %>
 </section>
