--- a/lib/zam_web/templates/layout/app.html.eex
+++ b/lib/zam_web/templates/layout/app.html.eex
@@ -13,6 +13,7 @@
       <section class="container">
         <nav role="navigation">
           <ul>
+            <li><a href="/paiza">Paiza</a></li>
             <li><a href="/about">About YamZam</a></li>
           </ul>
         </nav>
