Upgraded to phx 1.5.1, ecto 4.1, jason 1.2, crawlie 1.0

--- a/lib/zam_web/templates/page/about.html.eex
+++ b/lib/zam_web/templates/page/about.html.eex
@@ -1,8 +1,15 @@
 <h1>About Yam<span class="zam">Zam</span> Search</h1>
 <p>Zam is a walled search that only indexes select domains.</p>
 
-<h2>Cookie Policy</h2>
-<p>If we want a cookie we'll make a policy.</p>
+<h2>Policy</h2>
+<p>There is no user tracking of any kind. You should search and be on your way.</p>
 
 <h2>Terms of Service</h2>
-<p>Find what you are looking for and be on your way then.</p>
+<p>You can use this service to find things. Anything from height converters to castles.</p>
+
+<h2>YamZam Usage Tips</h2>
+<p>
+  <ul>
+    <li>Tab autocompletes while searching</li>
+  </ul>
+</p>
