--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,8 +1,8 @@
 /* This file is for your main application css. */
-
 @import "./phoenix.css";
+@import "../node_modules/nprogress/nprogress.css";
 
-@import "../../deps/phoenix_live_view/assets/css/live_view.css";
+/*@import "../../deps/phoenix_live_view/assets/css/live_view.css";*/
 
 nav {
   width: 100%;
@@ -55,6 +55,16 @@ form .search_for {
 
 .zam {
   color: #e09318;
+}
+
+nav .title {
+  margin: 1rem;
+  float: left;
+}
+nav .title a {
+  color: #38ad48;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 .results .title a {
