--- a/lib/zam_web/templates/page/about.html.eex
+++ b/lib/zam_web/templates/page/about.html.eex
@@ -1,8 +1,8 @@
 <h1>About Yam<span class="zam">Zam</span> Search</h1>
-<p>Zam is a walled search that only indexes select domains.</p>
+<p>Zam is a walled search that only indexes select domains. Yam is added to Zam making YamZam.</p>
 
 <h2>Policy</h2>
-<p>There is no user tracking of any kind. You should search and be on your way.</p>
+<p>There is no user tracking of any kind. You can search and be on your way.</p>
 
 <h2>Terms of Service</h2>
 <p>You can use this service to find things. Anything from height converters to castles.</p>
@@ -10,6 +10,12 @@
 <h2>YamZam Usage Tips</h2>
 <p>
   <ul>
+    <li>Autocomplete is in alpha (work in progress)</li>
     <li>Tab autocompletes while searching</li>
+    <li>Or search: news | rogan</li>
+    <li>Exclusion: news !Gab</li>
+    <li>By title only: @title The Irish News</li>
+    <li>Exclude title: @!title youtube</li>
+    <li>Phrase search: "all handmade items"</li>
   </ul>
 </p>
