--- a/lib/zam_web/live/search_results_live.html.leex
+++ b/lib/zam_web/live/search_results_live.html.leex
@@ -2,7 +2,7 @@
 
 <section class="results">
   <%= if (@offset > 0) do %>
-    <div class="view_next" phx-click="search_results_next_page">View more results</div>
+    <div class="view_next" phx-click="search_results_next_page">View more results for "<%= @search_for %>"</div>
   <% end %>
 
   <%= for result <- @results do %>
@@ -27,6 +27,6 @@
     <% end %>
   <% end %>
   <%= if (@offset > 0) do %>
-    <div class="view_next" phx-click="search_results_next_page">View more results</div>
+    <div class="view_next" phx-click="search_results_next_page">View more results for "<%= @search_for %>"</div>
   <% end %>
 </section>
