Added better meta parsing

--- a/lib/zam_web/live/search_results_live.html.leex
+++ b/lib/zam_web/live/search_results_live.html.leex
@@ -15,7 +15,7 @@
             </a></div>
           <% end %>
           <div class="title"><a href="<%= result.link %>"><%= result.title %></a></div>
-          <div class="link"><a href="<%= result.link %>"><%= result.link %></a></div>
+          <div class="link"><a href="<%= result.link %>"><%= URI.parse(result.link) |> Map.get(:host) %></a></div>
           <div clsas="description"><%= result.description %></div>
         </div>
       <% _ -> %>
