Minor fixes to parser

--- a/lib/zam_web/templates/page/about.html.eex
+++ b/lib/zam_web/templates/page/about.html.eex
@@ -1,4 +1,4 @@
-<h1>What's in the name Yam<span class="zam">Zam</span> Search</h1>
+<h1>What's in the name <span class="yam">Yam</span><span class="zam">Zam</span> Search</h1>
 <p>Zam is a walled search based out of Tartaria that only indexes select domains. Yam is The Way.</p>
 
 <h2>Policy</h2>
@@ -13,7 +13,7 @@ parsing, indexing, searching and storing web data. None of your results come fro
 <p>You can use this service to find things. The news, height conversion tooling, castles and a variety of logos driven content.</p>
 
 <h2>How <span class="yam">Yam</span><span class="zam">Zam</span> Makes Money</h2>
-<p>It doesn't unfortunately.</p>
+<p>It doesn't unfortunately. This section will be updated if we start wanting to pay the bills. There will be no ads nor any favourites played in search results.</p>
 
 <h2><span class="yam">Yam</span><span class="zam">Zam</span> Usage Tips</h2>
 <p>
