--- a/lib/zam_web/templates/layout/root.html.leex
+++ b/lib/zam_web/templates/layout/root.html.leex
@@ -35,6 +35,7 @@
           </div>
           <ul>
             <li><a href="https://github.com/praxis-of-nines/zam-search">Source</a></li>
+            <li><a href="/feedback">Feedback</a></li>
             <li><a href="/about">About</a></li>
           </ul>
         </nav>
