--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,6 +4,10 @@
 
 /*@import "../../deps/phoenix_live_view/assets/css/live_view.css";*/
 
+main .alert {
+  position: fixed;
+}
+
 nav {
   width: 100%;
 }
@@ -155,6 +159,18 @@ form .suggestion {
   font-size: 14pt;
   text-align: left;
   padding: 0 10px;
+}
+
+.feedback input {
+  margin-bottom: 0;
+}
+.feedback .tip {
+  font-style: italic;
+  color: #808080;
+  font-size: 14px;
+}
+.feedback button {
+  margin: 15px 0;
 }
 
 @media screen and (max-width: 500px) {
