Removing accidental code

--- a/lib/zam_web/templates/page/feedback.html.eex
+++ b/lib/zam_web/templates/page/feedback.html.eex
@@ -42,11 +42,4 @@
 
       <%= submit "Send Feedback" %>
     </form>
-</div>Join Zoom Meeting
-https://us05web.zoom.us/j/86404182207?pwd=c0lEWG1Vd2huRUw4N1RSVUF0Y0pJUT09
-
-Meeting ID: 864 0418 2207
-Passcode: P9YPU8
-
-
-
+</div>
