--- a/lib/zam_web/live/image_search_results_live.html.leex
+++ b/lib/zam_web/live/image_search_results_live.html.leex
@@ -1,4 +1,4 @@
-<%= render(ZamWeb.PageView, "search_input.html", assigns) %>
+z<%= render(ZamWeb.PageView, "search_input.html", assigns) %>
 
 <%= if @offset > 0 do %>
   <div class="view_next" phx-click="search_results_next_page">View more results</div>
